<resources>
    <string name="app_name">Migraine Trigger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_severity">Severity</string>
    <string name="nav_answers">Answers</string>
    <string name="nav_f_a_q">F.A.Q.</string>
    <string name="nav_records">Records</string>
    <string name="nav_report">Report</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="app_icon">app icon</string>
    <string name="dev_name">M.S. Wickramarathne</string>
    <string name="app_version">v 2.0 - alpha</string>

    <string name="title_activity_add_record">AddRecordActivity</string>
...
    <string name="pref_backup_summery">Backup application database</string>
    <string name="pref_restore_summery">Restore application database</string>
    <string name="pref_color_scheme_summery">Select color scheme for Migraine Trigger</string>
    <string name="pref_color_scheme_title">Application colors</string>
    <string name="splash_scree_background">Splash screen background</string>
    <string name="splash_screen_app_name">Migraine Trigger</string>
    <string name="about_opens_source_licenses">Open source licenses</string>
    <string name="report_down">▼</string>
    <string name="answers_drag_handler">drag handler</string>
    <string name="answers_cancel">Cancel</string>
    <string name="answers_save">Save</string>
    <string name="answers_add">Add</string>
    <string name="new_record_sync">Sync</string>
...
    <string name="record_filter_btn_cancel">Cancel</string>
    <string name="record_filter_btn_clear">Clear</string>
    <string name="record_filter_btn_filter">Filter</string>
    <string name="weather_title">Weather average</string>
    <string name="home_help_no_data">Start by adding records, press + button</string>
    <string name="home_emoji">emoji</string>
    <string name="new_fab_basic">Basic</string>
    <string name="new_fab_inter">Intermediate</string>
    <string name="new_fab_full">Full</string>
    <string name="weather_credit_text">Powered by Dark Sky</string>
    <string name="addNewAnswer">New answer</string>

</resources>

