...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">


            <TextView
                android:id="@+id/txt_about_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_opens_source_licenses"
...
